Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-18241

Wrong buffer for field 'obd_quotactl' (1 of 1) in format 'OST_QUOTACTL'

Details

    • Bug
    • Resolution: Fixed
    • Minor
    • Lustre 2.17.0
    • None
    • None
    • 3
    • 9223372036854775807

    Description

      LustreError: 145795:0:(osc_quota.c:310:osc_quotactl()) ptlrpc_queue_wait failed, rc: -5
      LustreError: 11-0: lustre-OST0136-osc-ffff9c913de55000: operation ost_connect to node 10.85.142.116@tcp failed: rc = -19
      LustreError: 2947815:0:(layout.c:2197:__req_capsule_get()) @@@ Wrong buffer for field 'obd_quotactl' (1 of 1) in format 'OST_QUOTACTL', 0 vs. 112 (server)  req@000000003dd10047 x1799800062051328/t0(0) o19->lustre-OST0137-osc-ff1957ce3f527800@10.85.142.122@tcp:28/4 lens 336/224 e 0 to 0 dl 1721006455 ref 1 fl Complete:RNQU/0/0 rc -107/-107 job:''
      

      Attachments

        Activity

          People

            hongchao.zhang Hongchao Zhang
            hongchao.zhang Hongchao Zhang
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: